[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/BlackOrWhiteListWidget.gd" type="Script" id=1]

[node name="BlackOrWhiteListWidget" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 24.0

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "Title"

[node name="BlacklistCheckBox" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 32.0
margin_right = 113.0
margin_bottom = 24.0
pressed = true
text = "blacklist"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 117.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="AddButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 686.0
margin_right = 757.0
margin_bottom = 24.0
text = "Add item"

[node name="RemoveButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 761.0
margin_right = 859.0
margin_bottom = 24.0
disabled = true
text = "Remove item"

[node name="ClearButton" type="Button" parent="HBoxContainer/HBoxContainer"]
margin_left = 863.0
margin_right = 907.0
margin_bottom = 24.0
text = "Clear"

[node name="Tree" type="Tree" parent="."]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
hide_root = true

[connection signal="toggled" from="HBoxContainer/BlacklistCheckBox" to="." method="_on_BlacklistCheckBox_toggled"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="item_edited" from="Tree" to="." method="_on_Tree_item_edited"]
[connection signal="item_selected" from="Tree" to="." method="_on_Tree_item_selected"]
[connection signal="nothing_selected" from="Tree" to="." method="_on_Tree_nothing_selected"]
